# BudjetointiSovellus

./: .gitignore  README.md  pyproject.toml  tasks.py
data/: database.sqlite
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaatittely.md
laskarit/: viikko1.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coveragerc
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md  sekvenssikaavio.md
src/: build.py  database_connection.py  index.py  initialize_database.py
src/entities/: budgets.py  users.py
src/repositories/: budgeting_repo.py  user_repo.py
src/services/: main_service.py
src/tests/repos/: budgeting_repo_test.py  user_repo_test.py
src/tests/services/: main_service_test.py
src/ui/: budget_details_ui.py  budgeting_ui.py  create_account_ui.py  create_budget_ui.py  login_ui.py  ui.py
