[tool.poetry]
name = "ohjelmistotekniikka"
version = "0.1.0"
description = ""
authors = ["SamiKazan <sami.kazan@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
invoke = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
coverage = "^7.6.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
